[gd_scene load_steps=7 format=3 uid="uid://sd7x2ttcqgsv"]

[ext_resource type="Script" uid="uid://ddy5ii6v6mflw" path="res://Objects/Projectiles/SpearProjectile/GenericProjectile.gd" id="1_hs6qt"]
[ext_resource type="PackedScene" uid="uid://basi3gkp6u5gf" path="res://Components/AttackComponent/attack_component.tscn" id="3_uog4u"]

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_wmwbi"]
length = 1.0

[sub_resource type="Animation" id="Animation_f31j0"]
resource_name = "Go"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RotationPivot/Line2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, 0, 0, 0, 0, 1, -0.3, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RotationPivot/Line2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, 0, 0, 0, 0, 1.5, -0.15, 0, 0.15, 0, 0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.1, 0.3)
}

[sub_resource type="Animation" id="Animation_tps3w"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RotationPivot/Line2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RotationPivot/Line2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s8c2n"]
_data = {
&"Go": SubResource("Animation_f31j0"),
&"RESET": SubResource("Animation_tps3w")
}

[node name="SpearProjectile" type="Node2D"]
script = ExtResource("1_hs6qt")
damage = 15
knockback = -100.0

[node name="RotationPivot" type="Node2D" parent="."]

[node name="AttackComponent" parent="RotationPivot" node_paths=PackedStringArray("collisionShape") instance=ExtResource("3_uog4u")]
rotation = -1.5708
collision_mask = 8
attackName = "SpearProjectile"
collisionShape = NodePath("CollisionShape2D")
disabled = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotationPivot/AttackComponent"]
position = Vector2(1.31134e-07, -3)
shape = SubResource("SeparationRayShape2D_wmwbi")

[node name="RayCast" type="RayCast2D" parent="RotationPivot"]
position = Vector2(-3, 0)
target_position = Vector2(100, 0)

[node name="Line2D" type="Line2D" parent="RotationPivot"]
width = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s8c2n")
}
speed_scale = 5.0
